# Ratio

./: CMakeLists.txt  README.md
include/: Rationnal.h
myCode/: CMakeLists.txt
myCode/src/: main.cpp
myLib/: CMakeLists.txt
myLib/doc/: CMakeLists.txt  Doxyfile-html.cmake
myLib/include/: Rational.h  Rationnal.h
myLib/src/: Rational.cpp  Rationnal.cpp
myTest/: CMakeLists.txt
myTest/src/: sample_test.cpp
src/: main.cpp
